tests/errors/pop-to-non-zero.ja
procedure main()
    int x
    stack s
    x += 5
    push(x, s)
    x += 3
    pop(x, s)
